# lexicalAnalysis

./: CMakeLists.txt  main.cpp
file_parsing/: CMakeLists.txt  pString.cpp  stringParser.cpp
file_parsing/include/parsing/: stringParser.h
file_parsing/include/string/: pString.h
tests/: CMakeLists.txt
tests/readers/: byte_read_write.cpp
tests/sample_text/: basic_file.json
tests/test_script/: file_write_byte.cpp
tests/tests/: simpleGTest.cpp  stringTest.cpp
